@@ -2,9 +2,9 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Mikhail Pushkarev", "eDer3432f"),
                 new Account("142", "Mikhail Pushkarev", "000001")
         );
         HashSet<Account> expected = new HashSet<Account>(
-                Arrays.asList(
+                Set.of(
                 new Account("123", "Mikhail Pushkarev", "eDer3432f"),
                 new Account("142", "Mikhail Pushkarev", "000001")
                 )
@@ -28,13 +28,13 @@ public class NotifyAccountTest {
 
     @Test
     public void senExpectedDuplicate() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Mikhail Pushkarev", "eDer3432f"),
                 new Account("142", "Mikhail Pushkarev", "000001"),
                 new Account("142", "Mikhail Pushkarev", "000001")
         );
-        HashSet<Account> expected = new HashSet<>(
-                Arrays.asList(
+        HashSet<Account> expected = new HashSet<Account>(
+                Set.of(
                         new Account("123", "Mikhail Pushkarev", "eDer3432f"),
                         new Account("142", "Mikhail Pushkarev", "000001")
                 )
