@@ -2,7 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -17,7 +16,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expected = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -31,7 +30,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2, 3, 4},
                 {5, 6, 7, 8}
         };
-        List<Integer> expected = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8
         );
         List<Integer> res = array.toList(input);
